reports/Principio-Variacional.log
Traceback (most recent call last):
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/jfhlewyee/anaconda3/envs/jb/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
````{admonition}
:class: Warning

Antes de resolver estos ejercicios, puede resultarle de utilidad revisar el Notebook de Álgebra Simbólica
````
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    ````{admonition}[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3750378203.py, line 1)

